--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/taxiservice
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.enabled=false
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.schemas=public
+
+
